# AgentWerkstatt

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CI-CD-SETUP.md  CODECOV_SETUP.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  __init__.py  _version.py  agent.md  agent.py  agent_config.yaml  agents.md  cli.py  config.py  config.yaml  conftest.py  example_agent.md  interfaces.py  main.py  pyproject.toml  test_langfuse_local.py
.github/workflows/: ci-cd.yml
docs/: api-reference.md  architecture.md  configuration.md  development.md  getting-started.md
examples/: EXAMPLE.md  agent.py  agent_config.yaml  config.yaml  config_lmstudio.yaml  config_ollama.yaml
examples/multi_agent/: README.md  config.yaml
examples/multi_agent/personas/: joke_writer.md  planner.md
examples/research_agent/: config.yaml
examples/research_agent/persona/: writer.md
examples/research_agent/personas/: planner.md  researcher.md  writer.md
llms/: __init__.py  base.py  claude.py  mock.py
personas/: coder.md  researcher.md  writer.md
scripts/: check_coverage.py
services/: conversation_handler.py  langfuse_service.py  memory_service.py  tool_executor.py
src/agentwerkstatt/: cli.py  config.py  interfaces.py  main.py
src/agentwerkstatt/llms/: __init__.py  api_client.py  base.py  claude.py  gemini.py  generic_llm.py  gpt_oss.py  lmstudio.py  mock.py  ollama.py
src/agentwerkstatt/services/: __init__.py  conversation_handler.py  history_manager.py  langfuse_service.py  memory_service.py  response_message_formatter.py  tool_executor.py  tool_interaction_handler.py
src/agentwerkstatt/tools/: __init__.py  base.py  delegate.py  discovery.py  file_writer.py  planner.py  reflection.py  schemas.py  websearch.py
tests/: conftest.py  temp_test_config.yaml  test_agent.md  test_agent.py  test_agent_end_to_end.py  test_agent_refactored.py  test_api_client.py  test_claude_llm.py  test_cli.py  test_config.py  test_config.yaml  test_conversation_handler.py  test_delegate_tool.py  test_file_writer_tool.py  test_gemini_llm.py  test_history_manager.py  test_langfuse_service.py  test_llms.py  test_main.py  test_memory_service.py  test_persona_loading.py  test_planner_tool.py  test_reflection_tool.py  test_tool_discovery.py  test_tool_executor.py  test_tool_schema.py  test_tools.py  test_websearch_tool.py
tools/: __init__.py  base.py  delegate.py  discovery.py  websearch.py
